# reference-design-air-quality

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  README.rst  VERSION  prj.conf  sample.yaml  west.yml
.github/workflows/: build_zephyr.yml  release.yml  test.yml
.reuse/: dep5
boards/: aludel_elixir_ns.conf  aludel_elixir_ns.overlay  aludel_elixir_ns_A.overlay  aludel_elixir_ns_B.overlay  aludel_elixir_v1_ns_A.conf  aludel_elixir_v1_ns_A.overlay  aludel_mini_nrf9160_ns.overlay  aludel_mini_v1_sparkfun9160_ns.conf  aludel_mini_v1_sparkfun9160_ns.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  nrf_dk_common.dtsi
pipelines/: json-to-lightdb.yml
src/: app_rpc.c  app_rpc.h  app_sensors.c  app_sensors.h  app_settings.c  app_settings.h  app_state.c  app_state.h  app_work.c  app_work.h  battery.c  json_helper.h  main.c  main.h  sensor_bme280.c  sensor_bme280.h  sensor_scd4x.c  sensor_scd4x.h  sensor_sps30.c  sensor_sps30.h  sensors.c  sensors.h
src/battery_monitor/: battery.c
src/battery_monitor/include/battery_monitor/: battery.h
src/dfu/: app_dfu.c
src/sensirion/common/: sensirion_common.h
src/sensirion/i2c/: sensirion_i2c_hal.c  sensirion_i2c_hal.h
src/sensirion/scd4x/: scd4x_i2c.c  scd4x_i2c.h
src/sensirion/sps30/: sps30_i2c.c  sps30_i2c.h
